# decentralized-uptime-monitoring

./: .gitignore  Anchor.toml  Cargo.toml  dump.rdb  package-lock.json  package.json  pnpm-lock.yaml
app/backend/: Cargo.toml
app/backend/migration/: Cargo.toml
app/backend/migration/src/: lib.rs  m20250511_132813_create_tables.rs  m20250608_091629_fix_website_register.rs  m20250615_174310_added_id.rs  m20250628_090238_notification_table.rs  m20250708_162547_add_coloms_for_notification.rs
app/backend/src/: main.rs
app/backend/src/cookie/: manager.rs
app/backend/src/entities/: computing_contribution.rs  device.rs  mod.rs  network_measurement.rs  notification.rs  reward.rs  reward_summary.rs  usage_metric.rs  user.rs  validator.rs  website_performance.rs  website_register.rs
app/backend/src/middleware/: auth.rs
app/backend/src/middlewares/: mod.rs  validator.rs  validator_auth.rs
app/backend/src/migration/src/: lib.rs
app/backend/src/redis/: client.rs  cookie_manager.rs  mod.rs  pubsub_manager.rs  queue_manager.rs  queue_worker.rs  shares_manager.rs
app/backend/src/routes/: add_website.rs  mod.rs  notification.rs  queue.rs  sse.rs  user.rs  validator.rs  website_monitoring.rs  website_performace.rs  websocket.rs
app/backend/src/services/: mail_service.rs
app/backend/src/shamir_secret/: secret.rs
app/backend/src/types/: cookie.rs  mod.rs  notification.rs  performance_data.rs  redis.rs  user.rs  website.rs  websocket.rs
app/backend/src/utils/: cookie_extractor.rs  jwt_extractor.rs  mod.rs
app/backend/src/websocket/: manager.rs
app/extension/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/extension/public/: manifest.json  popup.html
app/extension/src/: background.ts  content.ts  popup.tsx
app/extension/src/popup/: index.tsx  popup.css  popup.html
app/frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
app/frontend/src/backend/: Cargo.toml
app/frontend/src/backend/src/: main.rs
app/frontend/src/backend/src/entities/: device.rs  mod.rs  user.rs  vaildator.rs  validator.rs  website_performance.rs  website_register.rs
app/frontend/src/backend/src/handlers/: user.rs
app/frontend/src/backend/src/migration/: Cargo.toml
app/frontend/src/backend/src/routes/: mod.rs  user.rs  validator.rs  website_monitoring.rs  websocket.rs
app/frontend/src/backend/src/types/: mod.rs  user.rs  website.rs  websocket.rs
app/frontend/src/backend/src/websocket/: manager.rs
app/frontend/src/components/: AnalyticsDashboard.tsx  AppLayout.tsx
app/frontend/src/components/contributionMethods/: NetworkMetrics.tsx  WebsiteMonitor.tsx
app/frontend/src/components/dashboard/: DashboardCard.tsx  (+4 more)
app/frontend/src/contexts/: AuthContext.tsx  NotificationsContext.tsx
app/frontend/src/hooks/: useTheme.tsx  useValidatorNotifications.tsx
app/frontend/src/lib/: axios.ts  framer-variants.ts  mockData.ts  utils.ts
app/frontend/src/pages/: _app.tsx  app-usage.tsx  compute-resources.tsx  geographic-data.tsx  home.tsx  index.tsx  login.tsx  network-metrics.tsx  notifications.tsx  signup.tsx  website-monitor.tsx
app/frontend/src/services/: SessionManager.ts  TokenManager.ts
app/frontend/src/styles/: globals.css
app/frontend/src/types/: index.ts
app/shared/: package.json  pnpm-lock.yaml  tsconfig.json
app/shared/output/: index.js  websocket.js
app/shared/src/: index.ts  websocket.ts
programs/d-uptime/: Cargo.toml
programs/d-uptime/src/: lib.rs
programs/iot-register/: Cargo.toml
programs/iot-register/src/: lib.rs
tests/: iot-register.ts
(+27 files in other folders)
