[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros","ws","tokio"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tower-http = { version = "0.5.0", features = ["cors"] }
log = "0.4"
env_logger = "0.10"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
solana-sdk = "2.2.2"
bs58 = "0.5.1"
dashmap = "6.1.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.15" , features = ["json"]}
dotenvy = "0.15.7"
migration = { path = "./migration" }
bytes = "1.10.1"
tower-cookies = "0.11.0"
cookie = "0.18.1"
redis = {version = "0.32.3" , features = ["tokio-comp", "json"]}
axum-extra = { version = "0.10.1", features = ["cookie"] }
async-trait = "0.1"
