[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.2"
# Async runtime
tokio = { version = "1.34.0", features = ["full"] }
# Serialization/deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
# CORS support
tower-http = { version = "0.5.0", features = ["cors"] }
# LOGGING (similar to console.log)
log = "0.4"
env_logger = "0.10"
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
